# electronics-shop-project

./: pyproject.toml
homework-1/: main.py
homework-2/: main.py
homework-4/: main.py
src/: item.py  phone.py
tests/: test_item.py  test_phone.py
